--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -27,63 +27,12 @@ title = {{consort}: Create Consort Diagram},
   note = {R package version 1.2.2},
   url = {https://CRAN.R-project.org/package=consort},
 }
-@Manual{corrplot,
-  title = {R package `{corrplot}': Visualization of a Correlation Matrix},
-  author = {Taiyun Wei and Viliam Simko},
-  year = {2024},
-  note = {(Version 0.95)},
-  url = {https://github.com/taiyun/corrplot},
-}
-@Article{effectsize,
-  title = {{e}ffectsize: Estimation of Effect Size Indices and Standardized Parameters},
-  author = {Mattan S. Ben-Shachar and Daniel Lüdecke and Dominique Makowski},
-  year = {2020},
-  journal = {Journal of Open Source Software},
-  volume = {5},
-  number = {56},
-  pages = {2815},
-  publisher = {The Open Journal},
-  doi = {10.21105/joss.02815},
-  url = {https://doi.org/10.21105/joss.02815},
-}
 @Manual{epoxy,
 title = {{epoxy}: String Interpolation for Documents, Reports and Apps},
   author = {Garrick Aden-Buie},
   year = {2023},
   note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=epoxy},
-}
-@Manual{estimatr,
-title = {{estimatr}: Fast Estimators for Design-Based Inference},
-  author = {Graeme Blair and Jasper Cooper and Alexander Coppock and Macartan Humphreys and Luke Sonnet},
-  year = {2025},
-  note = {R package version 1.0.6},
-  url = {https://CRAN.R-project.org/package=estimatr},
-}
-@Article{fixest,
-  title = {Efficient estimation of maximum likelihood models with multiple fixed-effects: the {R} package {FENmlm}},
-  author = {Laurent Berg\'e},
-  year = {2018},
-  journal = {CREA Discussion Papers},
-  number = {13},
-}
-@Manual{furrr,
-title = {{furrr}: Apply Mapping Functions in Parallel using Futures},
-  author = {Davis Vaughan and Matt Dancho},
-  year = {2022},
-  note = {R package version 0.3.1},
-  url = {https://CRAN.R-project.org/package=furrr},
-}
-@Article{future,
-  author = {Henrik Bengtsson},
-  title = {A Unifying Framework for Parallel and Distributed Processing in R using Futures},
-  year = {2021},
-  journal = {The R Journal},
-  doi = {10.32614/RJ-2021-048},
-  url = {https://doi.org/10.32614/RJ-2021-048},
-  pages = {208--227},
-  volume = {13},
-  number = {2},
 }
 @Manual{gargle,
 title = {{gargle}: Utilities for Working with Google APIs},
@@ -143,6 +92,13 @@ title = {{ggsurvfit}: Flexible Time-to-Event Figures},
   note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=ggsurvfit},
 }
+@Manual{glue,
+title = {{glue}: Interpreted String Literals},
+  author = {Jim Hester and Jennifer Bryan},
+  year = {2024},
+  note = {R package version 1.8.0},
+  url = {https://CRAN.R-project.org/package=glue},
+}
 @Manual{gt,
 title = {{gt}: Easily Create Presentation-Ready Display Tables},
   author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and Alexandra Lauer and JooYoung Seo and Ken Brevoort and Olivier Roy},
@@ -160,6 +116,13 @@ title = {{gt}: Easily Create Presentation-Ready Display Tables},
   volume = {13},
   issue = {1},
   pages = {570-580},
+}
+@Manual{janitor,
+title = {{janitor}: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2024},
+  note = {R package version 2.2.1},
+  url = {https://CRAN.R-project.org/package=janitor},
 }
 @Manual{knitr2025,
 title = {{knitr}: A General-Purpose Package for Dynamic Report Generation in {R}},
@@ -188,33 +151,6 @@ title = {{knitr}: A Comprehensive Tool for Reproducible Research in {R}},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-}
-@Article{lme4,
-  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
-  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
-  journal = {Journal of Statistical Software},
-  year = {2015},
-  volume = {67},
-  number = {1},
-  pages = {1--48},
-  doi = {10.18637/jss.v067.i01},
-}
-@Article{marginaleffects,
-  title = {How to Interpret Statistical Models Using {marginaleffects} for {R} and {Python}},
-  author = {Vincent Arel-Bundock and Noah Greifer and Andrew Heiss},
-  journal = {Journal of Statistical Software},
-  year = {2024},
-  volume = {111},
-  number = {9},
-  pages = {1--32},
-  doi = {10.18637/jss.v111.i09},
-}
-@Manual{memoise,
-title = {{memoise}: `{Memoisation}' of Functions},
-  author = {Hadley Wickham and Jim Hester and Winston Chang and Kirill Müller and Daniel Cook},
-  year = {2021},
-  note = {R package version 2.0.1},
-  url = {https://CRAN.R-project.org/package=memoise},
 }
 @Article{mice,
   title = {{mice}: Multivariate Imputation by Chained Equations in R},
@@ -251,16 +187,6 @@ title = {{memoise}: `{Memoisation}' of Functions},
   year = {2018},
   url = {http://github.com/trinker/pacman},
 }
-@Article{parameters,
-  title = {Extracting, Computing and Exploring the Parameters of Statistical Models using {R}.},
-  volume = {5},
-  doi = {10.21105/joss.02445},
-  number = {53},
-  journal = {Journal of Open Source Software},
-  author = {Daniel Lüdecke and Mattan S. Ben-Shachar and Indrajeet Patil and Dominique Makowski},
-  year = {2020},
-  pages = {2445},
-}
 @Manual{patchwork,
 title = {{patchwork}: The Composer of Plots},
   author = {Thomas Lin Pedersen},
@@ -274,15 +200,6 @@ title = {{quarto}: R Interface to `{Quarto}' Markdown Publishing System},
   year = {2025},
   note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=quarto},
-}
-@Article{reshape,
-  author = {Hadley Wickham},
-  journal = {Journal of Statistical Software},
-  number = {12},
-  title = {Reshaping data with the reshape package},
-  url = {https://www.jstatsoft.org/v21/i12/},
-  volume = {21},
-  year = {2007},
 }
 @Manual{rmarkdown2024,
 title = {{rmarkdown}: Dynamic Documents for R},
@@ -318,22 +235,6 @@ title = {{stopwords}: Multilingual Stopword Lists},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=stopwords},
 }
-@Manual{survival2024,
-  title = {A Package for Survival Analysis in R},
-  author = {Terry M Therneau},
-  year = {2024},
-  note = {R package version 3.7-0},
-  url = {https://CRAN.R-project.org/package=survival},
-}
-
-@Book{survival2000,
-  title = {Modeling Survival Data: Extending the {C}ox Model},
-  author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
-  year = {2000},
-  publisher = {Springer},
-  address = {New York},
-  isbn = {0-387-98784-3},
-}
 @Manual{tictoc,
 title = {{tictoc}: Functions for Timing R Scripts, as Well as Implementations of
 ``{Stack}'' and ``{StackList}'' Structures},
@@ -341,12 +242,6 @@ title = {{tictoc}: Functions for Timing R Scripts, as Well as Implementations of
   year = {2024},
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tictoc},
-}
-@Manual{tidymodels,
-title = {{Tidymodels}: a collection of packages for modeling and machine learning using tidyverse principles.},
-  author = {Max Kuhn and Hadley Wickham},
-  url = {https://www.tidymodels.org},
-  year = {2020},
 }
 @Article{tidytext,
 title = {{tidytext}: Text Mining and Analysis Using Tidy Data Principles in R},
@@ -358,6 +253,13 @@ title = {{tidytext}: Text Mining and Analysis Using Tidy Data Principles in R},
   volume = {1},
   number = {3},
   journal = {JOSS},
+}
+@Manual{wordcloud,
+title = {{wordcloud}: Word Clouds},
+  author = {Ian Fellows},
+  year = {2018},
+  note = {R package version 2.6},
+  url = {https://CRAN.R-project.org/package=wordcloud},
 }
 @Article{tidyverse,
   title = {Welcome to the {tidyverse}},
